--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1485,10 +1485,44 @@
                                "-o ControlPath=/tmp/ssh-tramp-%%r@%%h:%%p "
                                "-o ControlMaster=auto -o ControlPersist=yes")))
   #+end_src
+* Filer
+  #+begin_src emacs-lisp
+    (use-package dired
+      :custom
+      (dired-dwim-target t)
+      (dired-recursive-copies 'always))
+  #+end_src
+* Browser
+  #+begin_src emacs-lisp
+    (use-package eww
+      :bind (nil
+             :map eww-mode-map
+             ("h" . eww-back-url)
+             ("l" . eww-forward-url)
+             ("o" . eww-browse-with-external-browser)
+             ("r" . eww-reload)
+             ("y" . eww-copy-page-down)
+             ("j" . next-line)
+             ("k" . previous-line)
+             ("g" . beginning-of-buffer)
+             (";" . quit-window)
+             ("G" . end-of-buffer))
+      :custom
+      (eww-search-prefix "https://www.google.com/search?q=")
+      ;; (browse-url-browser-function 'eww)
+      :config
+      (defun my:custom-browse-url (url &rest args)
+        "Open URL with eww if it does not contain the string 'slack' or 'notion'. Otherwise, use the default browser."
+        (if (or (string-match-p "slack" url)
+                (string-match-p "notion" url))
+            (browse-url-default-browser url)
+          (eww-browse-url url)))
+      (setq browse-url-browser-function 'my:custom-browse-url))
+#+end_src
 * Rss
   #+begin_src emacs-lisp
     (use-package elfeed
-      :requires eww
+      :after eww
       :ensure t
       :if (file-directory-p my:d:nextcloud)
       :bind (("C-x w" . elfeed)
@@ -1546,40 +1580,6 @@
       :config
       (elfeed-goodies/setup))
   #+end_src
-* Filer
-  #+begin_src emacs-lisp
-    (use-package dired
-      :custom
-      (dired-dwim-target t)
-      (dired-recursive-copies 'always))
-  #+end_src
-* Browser
-  #+begin_src emacs-lisp
-    (use-package eww
-      :bind (nil
-             :map eww-mode-map
-             ("h" . eww-back-url)
-             ("l" . eww-forward-url)
-             ("o" . eww-browse-with-external-browser)
-             ("r" . eww-reload)
-             ("y" . eww-copy-page-down)
-             ("j" . next-line)
-             ("k" . previous-line)
-             ("g" . beginning-of-buffer)
-             (";" . quit-window)
-             ("G" . end-of-buffer))
-      :custom
-      (eww-search-prefix "https://www.google.com/search?q=")
-      ;; (browse-url-browser-function 'eww)
-      :config
-      (defun my:custom-browse-url (url &rest args)
-        "Open URL with eww if it does not contain the string 'slack' or 'notion'. Otherwise, use the default browser."
-        (if (or (string-match-p "slack" url)
-                (string-match-p "notion" url))
-            (browse-url-default-browser url)
-          (eww-browse-url url)))
-      (setq browse-url-browser-function 'my:custom-browse-url))
-#+end_src
 * Mail
 ** mu4e
    #+begin_src emacs-lisp
