--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1528,6 +1528,13 @@
             (browse-url-default-browser url)
           (eww-browse-url url)))
       (setq browse-url-browser-function 'my:custom-browse-url))
+
+    (use-package eww-hatebu
+      :after eww
+      :vc (:url "https://github.com/syohex/emacs-eww-hatebu.git"
+                :branch "master")
+      :config
+      (eww-hatebu-setup))
 #+end_src
 * Rss
   #+begin_src emacs-lisp
