--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1534,7 +1534,9 @@
       :vc (:url "https://github.com/syohex/emacs-eww-hatebu.git"
                 :branch "master")
       :config
-      (eww-hatebu-setup))
+      (eww-hatebu-setup)
+      :custom-face
+      (eww-hatebu-bookmarks ((t (:foreground "#81A1C1" :weight bold)))))
 #+end_src
 * Rss
   #+begin_src emacs-lisp
