--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -263,23 +263,29 @@
     #+begin_src emacs-lisp
       (use-package doom-themes
         :ensure t
+        :disabled
         :config
         (load-theme 'doom-nord t))
     #+end_src
 *** Modus theme
     #+begin_src emacs-lisp
-      (use-package modus-themes
-        :disabled
-        :custom
-        ((modus-themes-italic-constructs  t)
-         (modus-themes-bold-constructs    t)
-         (modus-themes-region             '(bg-only no-extend))
-         (modus-themes-syntax             '(faint))
-         (modus-themes-diffs              'deuteranopia)
-         )
+      (use-package emacs
+        ;; :disabled
         :config
+        (require-theme 'modus-themes)
+        (setq
+         modus-themes-italic-constructs  t
+         modus-themes-bold-constructs    t
+         ;; modus-themes-org-blocks         'tinted-background
+         modus-themes-org-blocks         'gray-background
+         modus-themes-headings
+         '((agenda-structure . (variable-pitch light 2.2))
+           (agenda-date . (variable-pitch regular 1.3))
+           (t . (regular 1.15))))
+        (setq org-highlight-latex-and-related '(native))
         (load-theme 'modus-vivendi)
-        (load-theme 'modus-vivendi-tinted))
+        ;; (load-theme 'modus-vivendi-tinted)
+        )
     #+end_src
 ** Font
    #+begin_src emacs-lisp
@@ -1250,6 +1256,8 @@
          :init
          (setq org-roam-directory my:d:org-roam)
          (setq org-roam-dailies-directory "daily_notes/")
+         ;; (setq org-format-latex-options (plist-put org-format-latex-options :foreground 'auto))
+         (setq org-format-latex-options (plist-put org-format-latex-options :background "Transparent"))
          (setq org-format-latex-options (plist-put org-format-latex-options :scale 1.5))
          :custom
          (org-roam-capture-templates '(("n" "note" plain "%?"
