--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1350,7 +1350,7 @@
                (append org-roam-capture-templates
                        '(("p" "paper" plain "%?"
                           :if-new
-                          (file+head "reference/paper/${citar-citekey}.org" "#+title: ${title}\n#+date: %U\n#+last_modified: %U\n\n* Author\n\n* Abstract\n\n* Memo\n  :PROPERTIES:\n  :NOTER_DOCUMENT: ~/Nextcloud/zotero/${citar-file}\n  :END:\n")
+                          (file+head "reference/paper/${citar-citekey}.org" "#+title: ${title}\n#+date: %U\n#+last_modified: %U\n\n* Comment\n\n* Abstract\n** En\n\n** Ja\n\n* Memo\n  :PROPERTIES:\n  :NOTER_DOCUMENT: ~/Nextcloud/zotero/${citar-file}\n  :END:\n")
                           :immediate-finish t
                           :unnarrowed t))))
          (setq citar-org-roam-capture-template-key "p"))
@@ -1520,9 +1520,10 @@
       :config
       (defun my:custom-browse-url (url &rest args)
         "Open URL with eww if it does not contain the string 'slack' or 'notion'. Otherwise, use the default browser."
-        (if (or (string-match-p "slack" url)
-                (string-match-p "notion" url)
-                (string-match-p "github" url))
+        (if (or (string-match-p "slack\\.com" url)
+                (string-match-p "google\\.com" url)
+                (string-match-p "notion\\.so" url)
+                (string-match-p "github\\.com" url))
             (browse-url-default-browser url)
           (eww-browse-url url)))
       (setq browse-url-browser-function 'my:custom-browse-url))
