--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -88,10 +88,15 @@
      (setq truncate-lines nil
            truncate-partial-width-windows nil)
 
+     (use-package word-wrap-mode
+       :hook (visual-line-mode-hook . word-wrap-whitespace-mode)
+       :config
+       (add-to-list 'word-wrap-whitespace-characters ?\]))
+
      (use-package adaptive-wrap
        :ensure t
-       :demand t
-       :hook ((org-mode-hook nov-mode-hook) . #'adaptive-wrap-prefix-mode))
+       :hook (((markdown-mode-hook org-mode-hook nov-mode-hook) . visual-line-mode)
+              (visual-line-mode-hook . adaptive-wrap-prefix-mode)))
    #+end_src
 ** Delete
    Delete selection if you insert.
@@ -817,6 +822,7 @@
    #+begin_src emacs-lisp
      (use-package lsp-ltex
        :ensure t
+       :disabled
        :init
        (defconst my-os-type
          (pcase system-type
